--- a/frontend/src/app/components/pages/cart-page/cart-page.component.css
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.css
@@ -1,33 +1,65 @@
-.wrapper {
+.wrapper { 
+  height: 100%;
+  min-height: calc(100vh - 40px) ; 
   width: 80%;
   margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex: 1; 
+  overflow: hidden;
 }
 
+
 .container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-   
-    margin: 0.5rem auto;
-  }
-  
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(252, 251, 251);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  border-radius: 0.5rem;
+
+}
+
+app-title {
+  align-self: flex-start;
+  margin-left: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0.5rem auto;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  color: rgb(63, 81, 181);
+}
+
+a:hover {
+  opacity: 0.8;
+}
+
   ul{
     display: flex;
     flex-direction: column;
     flex:3 0;
     justify-content: space-evenly;
-    border: 1px solid rgb(132, 172, 186);
+    border: 1px solid #e4e4e4;
     border-radius: 1rem;
     list-style: none;
     margin: 0.5rem;
     padding: 0;
     max-width: 800px;
+    background-color: white;
     
   }
   
@@ -77,9 +109,11 @@
   }
   
   li .remove-button{
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
     background: none;
     border: none;
-    padding: 0.5rem;
     color: rgb(63, 81, 181);
     outline: none;
   }
@@ -96,11 +130,13 @@
     align-items: center;
     flex:1 3;
     height: 20rem;
-    border: 1px solid rgb(132, 172, 186);
+    border: 1px solid #e4e4e4;
     border-radius: 1rem;
     width: 30rem;
     padding: 0.5rem;
     margin: 0.5rem;
+    background-color: white;
+
   }
   
   .checkout>div{
@@ -149,12 +185,10 @@
     .wrapper {
       width: 100%;
     }
-    .container {
-      width: 80%;
+    .card {
+      width: 100%;
       flex-direction: column;
       align-items: center;
-      
-
     }
 
     ul{
