--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -1,24 +1,21 @@
 <div class="container">
-    <div class="content">
-      <app-title title="Order Form" fontSize="1.6rem"></app-title>
-      <form [formGroup]="checkoutForm">
-        <app-text-input [control]="fc.name" label="Name"></app-text-input>
-        <app-text-input [control]="fc.address" label="Address"></app-text-input>
-      </form>
+  <div class="content">
+    <app-title title="Order Form" fontSize="1.6rem"></app-title>
+    <form [formGroup]="checkoutForm">
+      <app-text-input [control]="fc.name" label="Name"></app-text-input>
+      <app-text-input [control]="fc.address" label="Address"></app-text-input>
+    </form>
+    <div class="scroller">
       <app-order-items-list [order]="order" />
     </div>
-    <div class="map">
-      <app-title
-      title="Choose Your Address On Map"
-      fontSize="1.6rem" />
-      <app-map [order]="order"/>
-    </div>
-    <div class="buttons-container">
-      <div class="buttons">
-        <button (click)="createOrder()">
-          Go To Payment
-        </button>
-      </div>
+  </div>
+  <div class="map">
+    <app-title title="Choose Your Address On Map" fontSize="1.6rem" />
+    <app-map [order]="order" />
+  </div>
+  <div class="buttons-container">
+    <div class="buttons">
+      <button (click)="createOrder()">Go To Payment</button>
     </div>
   </div>
-  
+</div>
