--- a/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
+++ b/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
@@ -1,27 +1,79 @@
 .wrapper {
-    width: 80%;
-    height: 85vh;
-    margin: 0 auto;
+    height: 100%;
+    min-height: calc(100vh - 40px) ; 
+    padding-top: 100px;
+    padding-bottom: 40px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    flex: 1; 
+    overflow: hidden;
 }
 
 section {
-    width: 300px;
+    width: 25rem;
     height: 500px;
-    padding: 1rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     text-align: center;
-    color: rgb(63, 151, 184);
+    color: #868686;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
-mat-icon {
-    color: rgb(254, 201, 10);
-    font-size: 100px;
-    width: 200px;
-    height: 80px;
+.delete-icon {
+    width: 8rem;
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid #f44336cc;
+    border-radius: 50%;
 }
+
+h4 {
+    font-size: 1.2rem;
+}
+
+.buttons-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+app-button {
+    width: 48%;
+}
+
+mat-icon {
+    color: #f44336cc;
+    font-size: 100px;
+    width: 100px;
+    height: 100px;
+}
+
+
+@media screen and (max-width: 700px) {
+    section {
+      width: 90%;
+      max-width: 27rem;
+    }
+
+    .buttons-container {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    app-button {
+        width: 100%;
+      }
+  }
 
