--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -1,5 +1,3 @@
-
-
 .wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -8,8 +6,8 @@
 }
 
 .aside{
+  margin-top: 60px;
   width: 100vw;
-  height: 100%;
   padding: 1rem;
   background-color: rgba(245, 245, 245, 0.772);
   display: flex;
@@ -36,6 +34,7 @@ app-search {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    align-self: center;
     list-style-type: none;
     padding: 5rem;
   }
