--- a/frontend/src/app/components/pages/payment-page/payment-page.component.css
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.css
@@ -1,17 +1,32 @@
-.container{
+  .container{
+    height: 100%;
+    min-height: calc(100vh - 40px); 
+    padding-top: 100px;
+    padding-bottom: 40px;
     margin-top: 1rem;
     display: flex;
-    margin: 0 2rem 6rem 2rem;
+    margin: 0 auto;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    flex: 1; 
+    gap: 3rem;
+    overflow: hidden;
+  }
+
+  .scrollable-container {
+    overflow-x: auto;
+
   }
   
   .content{
     width: 35rem;
-    margin-right: 3rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;   
+    overflow: hidden;
+
   }
+
   
   .summary > div{
     display: flex;
@@ -26,10 +41,14 @@
     margin: 0 1rem 0 0;
     flex-basis: 5rem;
   }
+
+  app-map {
+    width: 100%;
+  }
   
   
   .buttons-container{
-    flex-basis: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
   }
@@ -39,3 +58,9 @@
     width: 35rem;
   }
   
+  @media screen and (max-width: 700px) {
+    .map {
+      width: 100%;
+      min-width: 300px;
+    }
+  }
