--- a/frontend/src/app/components/pages/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.html
@@ -1,29 +1,28 @@
 <div class="container">
-    <div class="content">
-      <app-title title="Order Summary" fontSize="1.6rem"></app-title>
-      <div class="summary">
-        <div>
-          <h3>Name:</h3>
-          <span>{{order.name}}</span>
-        </div>
-        <div>
-          <h3>Address:</h3>
-          <span>{{order.address}}</span>
-        </div>
+  <div class="content">
+    <app-title title="Order Summary" fontSize="1.6rem"></app-title>
+
+    <div class="summary">
+      <div>
+        <h3>Name:</h3>
+        <span>{{ order.name }}</span>
       </div>
+      <div>
+        <h3>Address:</h3>
+        <span>{{ order.address }}</span>
+      </div>
+    </div>
+    <div class="scrollable-container">
       <app-order-items-list [order]="order" />
     </div>
-    <div class="map">
-      <app-title
-      title="Shipping Address"
-      fontSize="1.6rem"></app-title>
-      <app-map [order]="order" [readonly]="true" />
-    </div>
-    <div class="buttons-container">
-      <div class="buttons">
-        <app-paypal-button [order]="order"/>
-       
-      </div>
+  </div>
+  <div class="map">
+    <app-title title="Shipping Address" fontSize="1.6rem"></app-title>
+    <app-map [order]="order" [readonly]="true" />
+  </div>
+  <div class="buttons-container">
+    <div class="buttons">
+      <app-paypal-button [order]="order" />
     </div>
   </div>
-  
+</div>
