--- a/frontend/src/app/components/pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/product-page/product-page.component.css
@@ -1,12 +1,28 @@
 .container{
-  height: 90vh;
+  height: 100%;
+  min-height: calc(100vh - 40px); 
+  padding-top: 100px;
+  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1; 
+  overflow: hidden;
+}
+
+.box {
+  width: 70rem;
+  padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  border-radius: 0.5rem;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
-.container > *{
+.box > *{
   min-width: 20rem;
   max-width: 40rem;
 }
@@ -30,6 +46,7 @@ img{
 
 .header{
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -41,6 +58,7 @@ img{
 .stars {
   width: 200px;
   display: flex;
+  align-items: center;
   gap: 29px;
 }
 
@@ -57,7 +75,6 @@ img{
 .mode-select mat-select {
   min-width: 5.7rem;
 }
-
 
 .favorite{
   color: #3f51b5;
