--- a/frontend/src/app/components/partials/card/card.component.css
+++ b/frontend/src/app/components/partials/card/card.component.css
@@ -9,6 +9,7 @@
     overflow: hidden;
     color:  #3f51b5;
     background-color: white;
+    font-size: 0.8rem;
 }
 
 .card-small {
@@ -17,8 +18,9 @@
   }
   
 .card-medium {
-width: 18rem;
-height: 19rem;
+    width: 18rem;
+    height: 20rem;
+    font-size: 1rem;
 }
   
 .card-large {
@@ -53,11 +55,8 @@ img{
 }
 
 .content{
-    margin-top: 0.3rem;
-    margin-bottom: .5rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 0;
     position: relative;
-    height: 2.7rem;
     width: 100%;
 }
 
@@ -68,9 +67,9 @@ img{
 
 .favorite{
     position: absolute;
-    top: 0.5rem;
+    top: 0.7rem;
     right: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.2em;
 }
 
 .favorite:hover {
@@ -84,6 +83,7 @@ img{
 
 .stars{
     margin-bottom: 0.2rem;
+    padding: 0.5rem 0;
 }
 
 .product-item-footer{
@@ -100,7 +100,7 @@ img{
     border-radius: 2rem;
     background-color: whitesmoke;
     display: inline-block;
-    font-size: 0.8rem;
+    font-size: 0.8em;
     color: grey;
     margin-right: 0.3rem;
     padding: 0 0.5rem;
@@ -108,28 +108,41 @@ img{
 }
 
 .price{
-    height: 50px;
     padding: 0 1rem;
     background: white;
     color: #414141;
-    margin-top: 0.7rem;
-    font-size: 1.1rem;
+    font-size: 1.1em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    }
+}
 
 .add-btn {
-    width: 4rem;
-    padding:  10px;
-    border-radius: 5px;
-    background-color:  #3f51b5;
-    color: white;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3f51b5;
+    background-color: white;
+    opacity: 0.8; 
     border: none;
-    cursor: pointer;
+    border-radius: 50%;
 }
 
 .add-btn:hover {
-    opacity: 0.8;
+    opacity: 1;
+    cursor: pointer;
+    background-color: whitesmoke;
+    transition: all 0.3s ease-in-out;
+}
+
+mat-icon {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+    width: 1.5rem;
+    height: 1.5rem;
+   
 }
 
