--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -39,7 +39,7 @@ header {
   }
 
   mat-icon {
-    height: 22px;
+    height: 21px;
   }
   
   .container{
@@ -118,16 +118,17 @@ header {
   
   
   .counter {
-    height: 20px;
-    width: 20px;
+    height: 22px;
+    width: 22px;
     background: #F50057;
     color: white;
-    padding: 0.5rem;
     border-radius: 100rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    line-height: 11px;
     position: absolute;
     top: 9px;
     right: 12px;
