--- a/frontend/src/app/components/partials/map/map.component.css
+++ b/frontend/src/app/components/partials/map/map.component.css
@@ -1,8 +1,10 @@
 .container{
-    position: relative;
-    width: 35rem;
-    height: 22rem;
-    text-align: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  width: 35rem;
+  height: 22rem;
+  text-align: center;
   }
   
   .map{
@@ -31,16 +33,11 @@
     background-color: white;
   }
   
-  @media screen and (max-width: 760px) {
+  @media screen and (max-width: 700px) {
     .container {
-      width: 400px;
+      max-width: 100%;
+      
     }
   }
 
   
-  @media screen and (max-width: 440px) {
-    .container {
-      width: 300px;
-      margin: 0 auto;
-    }
-  }
