all users and all orders retrieved from backend

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -31,6 +31,8 @@
             <a routerLink="/account">Profile</a>
             <a *ngIf="user.isAdmin" routerLink="/dashboard">Dashboard</a>
             <a *ngIf="!user.isAdmin" routerLink="/orders">Orders</a>
+            <a *ngIf="user.isAdmin" routerLink="/all-orders">Orders</a>
+            <a *ngIf="user.isAdmin" routerLink="/users">Users</a>
             <a (click)="logout()">Logout</a>
           </div>
         </li>
