--- a/frontend/src/app/components/partials/card/card.component.html
+++ b/frontend/src/app/components/partials/card/card.component.html
@@ -1,46 +1,42 @@
-<div  [ngClass]="['card',  'card-' + cardSize]">
-    <a class="image-link" routerLink="/product/{{ product.id }}">
-      <img [src]="product.imageUrl" alt="{{ product.name }}" />
+<div [ngClass]="['card', 'card-' + cardSize]">
+  <a class="image-link" routerLink="/product/{{ product.id }}">
+    <img [src]="product.imageUrl" alt="{{ product.name }}" />
+  </a>
+  <div class="content">
+    <a routerLink="/product/{{ product.id }}" class="name">
+      {{ product.name }}
     </a>
-    <div class="content">
-      <a routerLink="/product/{{ product.id }}" class="name">
-        <span>
-          {{ product.name }}
-        </span>
-      </a>
 
-      <span
-        class="  material-icons favorite {{
-          user.id && favoriteProductsSet?.has(product.id)
-            ? 'favorite'
-            : 'not'
-        }}"
-        (click)="toggleFavourite(product)"
-      >
-        favorite
-      </span>
-      <div class="stars">
-        <app-star-rating
-          [averageRating]="product.averageRating"
-          [productId]="product.id"
-          [size]="cardSize=='small' ? .8 : 1"
-        ></app-star-rating>
-      </div>
-      <div class="product-item-footer">
-        <div class="origins">
-          <span *ngFor="let origin of product.origins">
-            {{ origin }}
-          </span>
-        </div>
-      </div>
+    <span
+      class="  material-icons favorite {{
+        user.id && favoriteProductsSet?.has(product.id) ? 'favorite' : 'not'
+      }}"
+      (click)="toggleFavourite(product)"
+    >
+      favorite
+    </span>
+    <div class="stars">
+      <app-star-rating
+        [averageRating]="product.averageRating"
+        [productId]="product.id"
+        [size]="cardSize == 'small' ? 0.8 : 1"
+      ></app-star-rating>
     </div>
-
-    <div class="price">
-      <span>
-        {{ product.price | currency : "EUR" }}
-      </span>
-      <button class="add-btn" (click)="addToCart(product)">
-        <mat-icon >add_shopping_cart</mat-icon>
-      </button>
+    <div class="product-item-footer">
+      <div class="origins">
+        <span *ngFor="let origin of product.origins">
+          {{ origin }}
+        </span>
+      </div>
     </div>
   </div>
+
+  <div class="price">
+    <span>
+      {{ product.price | currency : "EUR" }}
+    </span>
+    <button class="add-btn" (click)="addToCart(product)">
+      <mat-icon>add_shopping_cart</mat-icon>
+    </button>
+  </div>
+</div>
