--- a/frontend/src/app/components/partials/not-found/not-found.component.css
+++ b/frontend/src/app/components/partials/not-found/not-found.component.css
@@ -1,11 +1,16 @@
-div {
-    height: 30rem;
+  div {
+    height: 100%;
+    min-height: calc(100vh - 40px) ; 
+    padding-top: 100px;
+    padding-bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    flex: 1; 
     font-size: 1.5rem;
     font-weight: 100;
+    overflow: hidden;
   }
   
   a {
