--- a/frontend/src/app/components/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
       button
       mat-raised-button
       color="warn"
-      (click)="openDialog()"
+      (click)="openOrderDialog()"
     >
       Add product
       <mat-icon>add</mat-icon>
