--- a/frontend/src/app/components/pages/orders-list/orders-list.component.html
+++ b/frontend/src/app/components/pages/orders-list/orders-list.component.html
@@ -1,6 +1,93 @@
-<div class="wrapper">user
-  <ul>
-    <li *ngFor="let order of orders" >{{ order.name }} </li>
-    <li *ngFor="let user of users" >User : {{ user.name }} </li>
-  </ul>
-</div>
+<div class="container">
+    <div [ngClass]="isSearchBarVisible ? 'show' : 'hide'">
+      <mat-form-field>
+        <div class="form-field-container">
+          <mat-label>Filter</mat-label>
+          <input
+            matInput
+            (keyup)="applyFilter($event)"
+            placeholder="Filter Products"
+            #input
+          />
+        </div>
+      </mat-form-field>
+    </div>
+  
+    <div class="mat-elevation-z8 table-container">
+      <app-title title="Table of Orders"></app-title>
+      <table mat-table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Order No</th>
+          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+            <td mat-cell *matCellDef="let row">{{ row.status }}</td>
+          </ng-container>
+  
+        <ng-container matColumnDef="products">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Products</th>
+          <td mat-cell *matCellDef="let row">
+                <ng-container *ngFor="let item of row.items">
+                    <div class="product-container">
+                      <span class="product-name" (mouseenter)="item.showProductId = item.product.id" (mouseleave)="item.showProductId = null">
+                        {{ item.product.name }}
+                      </span>
+                      <span class="product-id" [ngClass]="{'visible': item.showProductId === item.product.id}">
+                        ID: <span class="bold">{{ item.product.id }}</span>
+                      </span>
+                    </div>
+                  </ng-container>
+              
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+          <td mat-cell *matCellDef="let row">{{ row.totalPrice | currency : "EUR"}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.createdAt | date : "dd/MM/yyyy" }}
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="customer">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+          <td mat-cell *matCellDef="let row">
+           {{ row.name }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+          <td mat-cell *matCellDef="let row">
+           {{ row.address }}
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+     
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
+  </div>
+  
+
+
+
+
