--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -99,6 +99,20 @@ header {
     box-shadow: 0 0 2px rgb(185, 185, 185);
     border: 1px solid #e5e5e5;
   }
+  
+  .role {
+    margin-right: 0.5rem; 
+  }
+
+  .role > p, .role p > span {
+    text-align: right; 
+    font-size: 0.6rem;
+  }
+
+  .role p > span {
+    font-weight: bold;
+  }
+
 
   .custom-icon {
    padding: 0;
@@ -136,6 +150,8 @@ header {
   
   .menu-container{
     position: relative;
+    color: '#616161';
+
   }
   
   .menu{
@@ -148,6 +164,10 @@ header {
   
   .menu-container:hover .menu{
     display: block;
+    color: white;
+  }
+  .menu-container:hover{
+    color: white;
   }
   
   .menu a{
