--- a/frontend/src/app/components/pages/users-list/users-list.component.html
+++ b/frontend/src/app/components/pages/users-list/users-list.component.html
@@ -1,6 +1,84 @@
-<div class="wrapper">
-  <ul>
-    <li *ngFor="let user of users">{{ user.name }}</li>
-  </ul>
-</div>
+<div class="container">
+  <div [ngClass]="isSearchBarVisible ? 'show' : 'hide'">
+    <mat-form-field>
+      <div class="form-field-container">
+        <mat-label>Filter</mat-label>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          placeholder="Filter Products"
+          #input
+        />
+      </div>
+    </mat-form-field>
+  </div>
 
+  <div class="mat-elevation-z8 table-container">
+    <app-title title="Table of Users"></app-title>
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="avatar">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
+        <td mat-cell *matCellDef="let row">
+          <img src="{{ row.avatar }}" alt="avatar" />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Roles</th>
+        <td mat-cell *matCellDef="let row">
+            <ng-container *ngFor="let role of row.roles">
+                {{role.role}}
+                <br>
+            </ng-container>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+        <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
+        <td mat-cell *matCellDef="let row">
+            <ng-container *ngIf="!row.phone">unknown</ng-container>
+            {{ row.phone }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.totalPrice | currency : "EUR" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.address }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+</div>
