--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -32,6 +32,7 @@ header {
     cursor: pointer;
   }
 
+
   button {
     border: none;
     outline : none;
@@ -57,6 +58,7 @@ header {
     line-height: 100%;
     display: flex;
     align-items: center;
+   
   }
 
   
@@ -64,7 +66,7 @@ header {
     height: 100%;
     display: flex;
     align-items: center;
-    list-style-type: none;
+    list-style-type: none; 
   }
 
   li {
@@ -78,8 +80,6 @@ header {
   }
 
   .dashboard {
-    width: 100%;
-    height: 100%;
     display: flex;
     gap: 3px;
     align-items: center;
@@ -149,27 +149,36 @@ header {
   }
   
   .menu-container{
+    width: 100%;
     position: relative;
-    color: '#616161';
-
+    color: #616161;
   }
-  
+
+
   .menu{
+    width: 100%;
     position:absolute;
     right: 0;
     z-index:1;
     background:whitesmoke;
+    color:  #3f51b5;
     display: none;
+  }
+
+  .menu-container > a:hover {
+    color: white;
+  }
+
+  .logout:hover {
+    color: white;
   }
   
   .menu-container:hover .menu{
     display: block;
-    color: white;
+    color:  #3f51b5;
   }
-  .menu-container:hover{
-    color: white;
-  }
-  
+
+ 
   .menu a{
     width: 100%;
     min-width:8rem;
