--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -14,12 +14,13 @@
 
         <li *ngIf="isAuth" class="menu-container">
           <a>
+            <div class="role">
+              <p>
+                Hey, <span>{{ user.name }}</span>
+              </p>
+              <p *ngIf="user.isAdmin">{{ user.roles[1].role }}</p>
+            </div>
             <div class="dashboard">
-              <div class="role">
-                <p>Hey, <span>{{ user.name }}</span></p>
-                <p *ngIf="user.isAdmin">{{ user.roles[1].role }}</p>
-              </div>
-
               <img
                 *ngIf="!user.avatar"
                 src="https://cdn-icons-png.flaticon.com/512/64/64572.png"
@@ -38,7 +39,7 @@
             <a *ngIf="!user.isAdmin" routerLink="/orders">Orders</a>
             <a *ngIf="user.isAdmin" routerLink="/all-orders">Orders</a>
             <a *ngIf="user.isAdmin" routerLink="/users">Users</a>
-            <a (click)="logout()">Logout</a>
+            <a  class="logout" (click)="logout()">Logout</a>
           </div>
         </li>
         <li>
