--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -4,16 +4,18 @@
 }
 
 header {
-    width: 100%;
+    width: calc(100vw - 250px - 1rem);
     height: 60px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.96);
     box-shadow: 0 0 8px rgb(185, 185, 185);
     position: fixed;
     top: 0;
+    right: 0;
     z-index: 5;
+    background-color: RED;
   }
 
   a.login-link  {
@@ -43,14 +45,6 @@ header {
     height: 21px;
   }
   
-  .container{
-    height: 100%;
-    width: 85%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
   
   a.logo {
     font-weight: bold;
@@ -106,7 +100,7 @@ header {
 
   .role > p, .role p > span {
     text-align: right; 
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
 
   .role p > span {
@@ -190,7 +184,7 @@ header {
     
   }
 
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 900px) {
   
     .container {
       width: 100%;
@@ -202,5 +196,9 @@ header {
 
     .logo {
       padding-inline: 1rem;
+    }
+
+    .role {
+      display: none;
     }
   }
