--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,7 +4,7 @@
 
 * {
   box-sizing: border-box;
-  font-family:Arial, Helvetica, sans-serif
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 html {
@@ -16,6 +16,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  min-height: 100vh; /*!!!*/
   height: 100%;
   width: 100%;
   position: relative;
